--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 server.port=7500
 # HW的corpId
 dingtalk.hw.corp_id=dinge52032a8ab8595c6ee0f45d8e4f7c288
+#应用--HW消息通知
 # HW应用1的appKey
 dingtalk.hw.app_key=dingfxqmrezouvk0n5aq
 # HW应用1的appSecret
@@ -8,12 +9,15 @@ dingtalk.hw.app_secret=BaNGtU8ruAzT4vYb4XXFTzCPmN9WG6HSjbfrBraQTj8nv19c5HMX8gZxV
 # HW应用1的agentId
 dingtalk.hw.app_agent_id=2549494164
 
+#应用--通知二楞
 # HW应用2的appKey
 dingtalk.hw2.app_key=dingycovd02g1hj9bwur
 # HW应用2的appSecret
 dingtalk.hw2.app_secret=-HcS2hCb-Sn06ODNYQQiZIafo9ig9FDkneqqfhwgBmsgiqUXtkcsTxwgW--OqhWw
 # HW应用2的agentId
 dingtalk.hw2.app_agent_id=2562426767
+#应用内机器人--机器人二楞
+dingtalk.hw2.robot.robotcode=dingycovd02g1hj9bwur
 
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=100MB
